# heron

./: .gitignore  CLAUDE.md  DESIGN.md  GENESIS_BEST_PRACTICES.md  GOALS.md  GOALS_NEXT.md  LEARNINGS.md  README.md  pyproject.toml
assets/: best_walker_phase3_v18_iter32.json  compass.urdf.tmpl  kneed.urdf.tmpl
scripts/: fall_test.py  mapelites_kneed.py  replay_sample.py  sample_kneed.py  walk_compass.py  walk_kneed.py
src/heron/walker/: kneed.py
