[project]
name = "heron"
version = "0.1.0"
description = "Passive dynamic walker research revival on Genesis + pyribs"
authors = [
    { name = "Yasuto Nishii", email = "yast@me.com" }
]
requires-python = ">=3.13"
dependencies = [
    "genesis-world>=0.4.6",
    "ribs>=0.10.0",
    "torch>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
